// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render <PostLoader /> correctly 1`] = `
<ContentLoader
  className="post-loader"
  height={100}
  key="0"
  primaryColor="#f3f3f3"
  secondaryColor="#ecebeb"
  speed={2}
  width={400}
>
  <rect
    height="7"
    rx="5"
    ry="5"
    width="230"
    x="0"
    y="15"
  />
  <rect
    height="6.4"
    rx="3"
    ry="3"
    width="85"
    x="0"
    y="30"
  />
  <rect
    height="6.4"
    rx="3"
    ry="3"
    width={330}
    x="0"
    y="50"
  />
  <rect
    height="6.4"
    rx="3"
    ry="3"
    width={209}
    x="0"
    y="65"
  />
  <rect
    height="6.4"
    rx="3"
    ry="3"
    width={223}
    x="0"
    y="80"
  />
</ContentLoader>
`;

exports[`render <ProfileLoader /> correctly 1`] = `
<ContentLoader
  height={400}
  primaryColor="#f3f3f3"
  repeat={1}
  secondaryColor="#ecebeb"
  speed={2}
  width={400}
>
  <circle
    cx="50%"
    cy="55"
    r="35"
  />
  <rect
    height="13"
    rx="7"
    ry="7"
    width="40%"
    x="30%"
    y="105"
  />
  <rect
    height="9"
    rx="7"
    ry="7"
    width="20%"
    x="40%"
    y="130"
  />
  <rect
    height="10"
    rx="7"
    ry="7"
    width="18%"
    x="20"
    y="175"
  />
  <rect
    height="10"
    rx="7"
    ry="7"
    width="40%"
    x="150"
    y="175"
  />
  <rect
    height="10"
    rx="7"
    ry="7"
    width="20%"
    x="20"
    y="200"
  />
  <rect
    height="10"
    rx="7"
    ry="7"
    width="45%"
    x="150"
    y="200"
  />
  <rect
    height="10"
    rx="7"
    ry="7"
    width="22%"
    x="20"
    y="225"
  />
  <rect
    height="10"
    rx="7"
    ry="7"
    width="35%"
    x="150"
    y="225"
  />
  <rect
    height="10"
    rx="7"
    ry="7"
    width="18%"
    x="20"
    y="250"
  />
  <rect
    height="10"
    rx="7"
    ry="7"
    width="40%"
    x="150"
    y="250"
  />
  <rect
    height="10"
    rx="7"
    ry="7"
    width="20%"
    x="20"
    y="275"
  />
  <rect
    height="10"
    rx="7"
    ry="7"
    width="45%"
    x="150"
    y="275"
  />
  <rect
    height="10"
    rx="7"
    ry="7"
    width="21%"
    x="20"
    y="300"
  />
  <rect
    height="10"
    rx="7"
    ry="7"
    width="35%"
    x="150"
    y="300"
  />
  <rect
    height="10"
    rx="7"
    ry="7"
    width="20%"
    x="20"
    y="325"
  />
  <rect
    height="10"
    rx="7"
    ry="7"
    width="40%"
    x="150"
    y="325"
  />
  <rect
    height="10"
    rx="7"
    ry="7"
    width="23%"
    x="20"
    y="350"
  />
  <rect
    height="10"
    rx="7"
    ry="7"
    width="45%"
    x="150"
    y="350"
  />
</ContentLoader>
`;

exports[`render <UserLoader /> correctly 1`] = `
<ContentLoader
  height={30}
  key="0"
  primaryColor="#f3f3f3"
  secondaryColor="#ecebeb"
  speed={2}
  width={400}
>
  <circle
    cx="10"
    cy="10"
    r="10"
  />
  <rect
    height="7"
    rx="5"
    ry="5"
    width={84}
    x="25"
    y="7"
  />
</ContentLoader>
`;
